fix: fixed performance & interactivity issue due to scrollTrigger on smaller devices by adding new cards on drivers page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,7 @@
   --font-ethnocentric: Ethnocentric-Regular;
   --font-formula1: Formula1-Regular;
   --font-titillium: TitilliumWeb-Regular;
+  --breakpoint-smd: 868px;
   --breakpoint-xsm: 594px;
   --breakpoint-xxsm: 354px;
 }
